# rollipop

./: .yarnrc.yml  ARCHITECTURE.md  CHANGELOG.md  cliff.toml  knip.json  package.json  rolldown  vite.config.ts
.changeset/: blue-baboons-work.md  brave-mirrors-shine.md  build-progress-total-cache.md  busy-jokes-reply.md  cache-hit-progress.md  clear-groups-think.md  cool-points-sell.md  crisp-symbols-glow.md  dev-server-event-bus.md  few-pugs-kick.md  fiery-clubs-stare.md  mcp-runtime-tools.md  native-flow-config.md  pre.json  prelude-virtual-entry.md  rare-planets-add.md  rolldown-1-0-9.md  soft-maps-build.md  tangy-otters-boil.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check-pr-title.yml  prepare-release.yml  release.yml
docs/: README.md  package.json
docs/content/docs/: troubleshooting.mdx
docs/src/app/: layout.tsx
examples/0.72/: Gemfile  package.json  rollipop.config.ts
examples/0.84/: App.tsx  package.json  rollipop-env.d.ts  rollipop.config.ts  sse-client.mts  tsconfig.json
examples/0.84/__tests__/: App.spec.tsx  navigation.spec.tsx
examples/0.84/src/: theme.ts
examples/module-federation/: .env  .gitignore  .mcp.json  README.md  app.json  babel.config.js  mf-script-loader.ts  package.json  rollipop-env.d.ts  rollipop.host.config.ts  rollipop.remote.config.ts  tsconfig.json  types.d.ts
examples/module-federation/android/: settings.gradle
examples/module-federation/android/app/src/main/jni/: CMakeLists.txt  ScriptManagerJni.cpp
examples/module-federation/ios/: Podfile
(+45 files in other folders)
